tests/errors/002-parsing/003-expected-expression/004-in-arguments-list/008-final-assignment-to-declaration.xxx
x := (a : int = 1, b : int = ) => () { }

// @TODO This should yield the same error.
// x := (a : int = 1, b : int =) => () { }
